[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58" # 错误处理
clap = { version = "3.2.5", features = ["derive"] } # 命令行解析
colored = "2.0.0" # 彩色终端
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.16" # 处理 mime 类型
reqwest = { version = "0.11", features = ["json"] } # http 客户端
tokio = { version = "1", features = ["full"] } # 异步处理库
syntect = "5.0.0"